<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_current_game"
            android:icon="@drawable/ic_menu_arrow_back"
            android:title="@string/navigation_current_game"/>
        <item
            android:id="@+id/navigation_new_game"
            android:icon="@drawable/ic_menu_arrow_back"
            android:title="@string/navigation_new_game"/>
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_menu_arrow_back"
            android:title="@string/navigation_profile"/>
        <item
            android:id="@+id/navigation_rank_list"
            android:icon="@drawable/ic_menu_arrow_back"
            android:title="@string/navigation_rank_list"/>
        <item
            android:id="@+id/navigation_exit"
            android:icon="@drawable/ic_menu_arrow_back"
            android:title="@string/navigation_exit"/>
    </group>
</menu>