<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/main_background_port"
              android:gravity="center"
              android:orientation="vertical">

    <EditText
        android:id="@+id/emailField"
        style="@style/onBoarding_edit_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwordField"
        style="@style/onBoarding_edit_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPass"
        android:inputType="textPassword"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_default_padding">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:background="@drawable/transparent_gradient_background"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:background="@drawable/transparent_gradient_background"
            android:text="@string/new_account"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboarding_default_padding"
        android:layout_marginEnd="@dimen/onboarding_default_padding"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>